src/test/deca/codegen/valid/created/cast_classe.deca
// Description :
//		Programme pour tester le cast entre int et float
//
// Resultats :
//		Ok

class B {
boolean x;}
class A extends B {
boolean y;}

{
A a = new A();
B b = new B();
a = (A)(b);
a.y;
b = (B)(a);

}