src/test/deca/codegen/invalid/created/objet_non_init_field.deca
// Description :
//		Programme pour tester le modulo par zero
//
// Resultats :
//		indefini

class A {
int x = 1;
}
{
A a;
a.x;
}